tests/functional/lang/eval-fail-fetchTree-negative.err.exp
error:
       … while calling the 'fetchTree' builtin
         at /pwd/lang/eval-fail-fetchTree-negative.bsd:1:1:
            1| builtins.fetchTree {
             | ^
            2|   type = "file";

       error: negative value given for 'fetchTree' argument 'owner': -1
